# my-tourism-stuff

./: .gitignore  01-ingest-and-clean.html  02-transform-and-validate.html  ACCOMPLISHMENTS.md  CHANGES.md  LICENSE  Makefile  PERFORMANCE.md  README.md  SIMPLIFICATION_SUMMARY.md  SUGGESTIONS.md  SUMMARY.md  deploy.sh  hello world.txt  index.html  overseas-visitors-to-britain-2024.xlsx  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  lint.yml
data/interim/: visitors_by_quarter.csv  visitors_by_quarter.csv.gitkeep
data/processed/: visitors_quarterly.parquet.gitkeep
docs/: data_dictionary.md  sources_catalogue.md
notebooks/: 01-ingest-and-clean.ipynb  02-transform-and-validate.ipynb
scripts/: clean_data.py  fetch_data.py
src/: cli.py  config.py  pipeline.py  utils.py
src/data/: clean.py  load.py  schemas.py  transform.py  validate.py
src/utils/: io.py
tests/: test-clean.py  test-transform.py  test-validate.py  test_clean.py  test_load.py  test_transform.py  test_utils.py  test_validate.py
