[tool.poetry]
name = "my-tourism-stuff"
version = "0.1.0"
description = "Repository for analysing tourism data."
authors = ["Casey Bell <casey.bell.7@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/casey-bell/my-tourism-stuff"
repository = "https://github.com/casey-bell/my-tourism-stuff"
keywords = ["tourism", "data", "ONS", "Great Britain", "analysis"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
pyarrow = "^12.0.0"
openpyxl = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
jupyter = "^1.0.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
