[project]
name = "my-tourism-stuff"
version = "0.1.0"
description = "Repository for analysing tourism data"
authors = [
    {name = "Casey Bell", email = "casey.bell.7@outlook.com"},
]
readme = {content-type = "text/markdown", file = "README.md"}
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["tourism", "data-analysis", "ons", "great-britain"]
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "plotly>=5.15.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "pre-commit>=3.4.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
]
analysis = [
    "statsmodels>=0.14.0",
    "geopandas>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/casey-bell/my-tourism-stuff"
Repository = "https://github.com/casey-bell/my-tourism-stuff"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
