[project]
name = "my-tourism-stuff"
version = "0.1.0"
description = "Repository for analysing tourism data"
authors = [
    {name = "Casey Bell", email = "casey.bell.7@outlook.com"},
]
readme = {content-type = "text/markdown", file = "README.md"}
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["tourism", "data-analysis", "ons", "great-britain", "data-pipeline"]
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "plotly>=5.15.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "jupyterlab>=4.0.0", 
    "ipykernel>=6.25.0", 
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "pre-commit>=3.4.0",
    "mypy>=1.5.0",
]
analysis = [
    "statsmodels>=0.14.0",
    "geopandas>=0.13.0",
    "folium>=0.15.0",     # For mapping
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
]

[project.urls]
Homepage = "https://github.com/casey-bell/my-tourism-stuff"
Repository = "https://github.com/casey-bell/my-tourism-stuff"
Documentation = "https://github.com/casey-bell/my-tourism-stuff#readme"
"Issue Tracker" = "https://github.com/casey-bell/my-tourism-stuff/issues"

[project.scripts]
tourism-pipeline = "src.pipeline:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

# Package discovery
[tool.setuptools]
packages = {find = {where = ["src"]}}
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.toml", "*.yaml", "*.json"]

# Code quality tools
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# Package versioning
[tool.setuptools_scm]
write_to = "src/_version.py"
